Issue 352: Progress on the design change - everything up to success story links (too much to lose)

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -412,6 +412,7 @@ LABEL {
 .content .two-column-layout {
   width: 900px;
   padding: 5px 15px 0px 15px;
+  display: block;
 }
 .content .two-column-layout.wide {
   width: 900px;
@@ -614,12 +615,18 @@ LABEL {
 }
 .thumbnail {
   float: left;
-  padding: 15px;
+  padding: 15px 10px 15px 10px;
   margin-top: 5px;
   margin-right: 10px;
   border-style: dotted;
   border-color: #a9b270;
   border-width: 1px;
+}
+.thumbnail.smidge {
+  margin-left: -2px;
+}
+.thumbnail.nudge {
+  margin-left: 12px;
 }
 /* Form errors */
 .errorExplanation H2 {
